@@ -220,6 +220,7 @@ TEZ-UI CHANGES (TEZ-8):
 Release 0.5.4: Unreleased
 
 ALL CHANGES:
+  TEZ-2133. Secured Impersonation: Failed to delete tez scratch data dir
   TEZ-2058. Flaky test: TestTezJobs::testInvalidQueueSubmission.
   TEZ-2037. Should log TaskAttemptFinishedEvent if taskattempt is recovered to KILLED.
   TEZ-2071. TestAMRecovery should set test names for test DAGs.
